--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -237,13 +237,13 @@ layout: default
          <button class="close-btn" onclick="closeAd()">&times;</button>
       </div>
       <h2>광고</h2>
+      <div id="redirectCounter" style="text-align:center; margin-bottom:10px;">7초 후 페이지를 이동합니다...</div>
       <ins class="adsbygoogle"
            style="display:block; margin: auto;"
            data-ad-client="ca-pub-9374368296307755"
            data-ad-slot="9952845435"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
-      <div id="redirectCounter" style="text-align:center; margin-top:10px;">7초 후 페이지를 이동합니다...</div>
   </div>
   
   <script>
