--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -143,6 +143,10 @@ layout: default
         .anchor-ad-top, .anchor-ad-bottom {
             height: 20px;
         }
+        .anchor-ad-top ins, .anchor-ad-bottom ins {
+            height: 20px !important; /* 광고 <ins> 태그 높이 조정 */
+            display: inline-block;
+        }
         body {
             padding-top: 20px;
             padding-bottom: 20px;
@@ -209,6 +213,11 @@ layout: default
     }
   </style>
 </head>
+
+
+
+
+
 <body>
 
   <!-- 상단 고정 광고 -->
