--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -256,7 +256,7 @@ layout: default
   <div id="overlay" onclick="closePopup()"></div>
   <div id="popup">
       <h2>kkdamoa에 오신 것을 환영합니다</h2>
-      <p>더 많은 콘텐츠를 보려면 광고를 시청하세요. 5초 후 광고 시청 후 추천 페이지로 이동합니다. 원치 않으시면 닫기 버튼을 클릭해주세요.</p>
+      <p>5초 후 광고 시청 후 추천 페이지로 이동합니다. 원치 않으시면 닫기 버튼을 클릭해주세요.</p>
       <p id="popupCounter">5초 후 광고 시청이 시작됩니다...</p>
       <button onclick="closePopup()">닫기</button>
   </div>
