--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -261,22 +261,22 @@ layout: default
       <button onclick="closePopup()">닫기</button>
   </div>
   <div id="adContainer">
-      <div class="ad-header">
-         <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
-         <button class="close-btn" onclick="closeAd()">&times;</button>
-      </div>
-      <h2>광고</h2>
-      <div style="text-align:center; margin-bottom:10px;">
-          <span id="redirectCounter">7초 후 페이지를 이동합니다...</span>
-          <button onclick="closeAd()" style="border:none; background:none; font-size:20px; cursor:pointer;">&times;</button>
-      </div>
-      <ins class="adsbygoogle"
-           style="display:block; margin: auto;"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="9952845435"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-  </div>
+    <div class="ad-header">
+       <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
+       <button class="close-btn" onclick="closeAd()">&times;</button>
+    </div>
+    <h2>광고</h2>
+    <ins class="adsbygoogle"
+         style="display:block; margin: auto;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="9952845435"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <div style="text-align:center; margin-top:10px;">
+        <span id="redirectCounter">7초 후 페이지를 이동합니다...</span>
+        <button onclick="closeAd()" style="border:none; background:none; font-size:20px; cursor:pointer;">&times;</button>
+    </div>
+</div>
   
   <script>
   // _posts 폴더의 포스트 URL 목록을 Jekyll을 사용해 JavaScript 배열로 생성
