--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -330,8 +330,8 @@ window.addEventListener('load', function() {
   window.onload = function() {
       if (!shouldShowPopup()) return;
   
-      // 5초에서 10초 사이의 랜덤 딜레이 설정
-      let randomDelay = Math.floor(Math.random() * (10000 - 5000 + 1)) + 5000;
+      // 1분에서 2분 사이의 랜덤 딜레이 설정
+      let randomDelay = Math.floor(Math.random() * (120000 - 60000 + 1)) + 60000;
   
       setTimeout(showPopup, randomDelay);
   };
