--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,17 +2,17 @@
 layout: archive
 ---
 
-    <!-- 상단 광고-->
-    <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-format="autorelaxed"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="4454543532"></ins>
-      <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
+<!-- 상단 광고-->
+<div class="ad-container" style="text-align: center; padding-bottom: 20px;">
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-format="autorelaxed"
+       data-ad-client="ca-pub-9374368296307755"
+       data-ad-slot="4454543532"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
 
 {{ content }}
 
@@ -156,52 +156,58 @@ layout: archive
   </script>
 
   <script>
-// 24시간 안에 같은 IP 접속 시 네 번째 접속에서는 차단하는 코드
-window.addEventListener('load', function() {
-    const currentTime = new Date().getTime();
-    const ipVisitKey = 'ipVisitData';
-    const ONE_DAY = 24 * 60 * 60 * 1000;
+    // 24시간 안에 같은 IP 접속 시 네 번째 접속에서는 차단하는 코드
+    window.addEventListener('load', function() {
+        const currentTime = new Date().getTime();
+        const ipVisitKey = 'ipVisitData';
+        const ONE_DAY = 24 * 60 * 60 * 1000;
 
-    const clientIp = 'user-ip-address'; // 예시로 IP를 설정했습니다.
+        const clientIp = 'user-ip-address'; // 예시로 IP를 설정했습니다.
 
-    let ipVisitData = JSON.parse(localStorage.getItem(ipVisitKey)) || {};
+        let ipVisitData = JSON.parse(localStorage.getItem(ipVisitKey)) || {};
 
-    function resetData() {
-        Object.keys(ipVisitData).forEach(ip => {
-            if (currentTime - ipVisitData[ip].lastVisit > ONE_DAY) {
-                delete ipVisitData[ip];
+        function resetData() {
+            Object.keys(ipVisitData).forEach(ip => {
+                if (currentTime - ipVisitData[ip].lastVisit > ONE_DAY) {
+                    delete ipVisitData[ip];
+                }
+            });
+            localStorage.setItem(ipVisitKey, JSON.stringify(ipVisitData));
+        }
+
+        function handleVisit() {
+            const visitData = ipVisitData[clientIp] || { count: 0, lastVisit: 0 };
+        
+            if (visitData.count === 0 || currentTime - visitData.lastVisit > ONE_DAY) {
+                // 첫 번째 접속 시 아무 작업도 하지 않음
+                visitData.count = 1; // 카운트를 1로 설정
+            } else if (visitData.count === 1) {
+                // 두 번째 접속 시 아무 작업도 하지 않음
+                visitData.count = 2; // 카운트를 2로 증가
+            } else if (visitData.count === 2) {
+                // 세 번째 접속 시 아무 작업도 하지 않음
+                visitData.count = 3; // 카운트를 3으로 증가
+            } else if (visitData.count === 3) {
+                // 네 번째 접속 시 아무 작업도 하지 않음
+                visitData.count = 4; // 카운트를 4로 증가
+            } else if (visitData.count >= 4) {
+                // 5번째 접속 시 페이지 차단
+                document.body.innerHTML = ''; // 페이지 내용 제거
+                window.location.href = "about:blank"; // 빈 페이지로 리다이렉트
+                return; // 페이지 로딩을 중단
             }
-        });
-        localStorage.setItem(ipVisitKey, JSON.stringify(ipVisitData));
-    }
-
-    function handleVisit() {
-        const visitData = ipVisitData[clientIp] || { count: 0, lastVisit: 0 };
-
-        if (visitData.count === 0 || currentTime - visitData.lastVisit > ONE_DAY) {
-            // 첫 번째 접속 시 아무 작업도 하지 않음
-            visitData.count = 1; // 카운트를 1로 설정
-        } else if (visitData.count === 1) {
-            // 두 번째 접속 시 아무 작업도 하지 않음
-            visitData.count = 2; // 카운트를 2로 증가
-        } else if (visitData.count === 2) {
-            // 세 번째 접속 시 아무 작업도 하지 않음
-            visitData.count = 3; // 카운트를 3으로 증가
-        } else if (visitData.count >= 3) {
-            // 네 번째 접속 시 페이지 차단
-            document.body.innerHTML = ''; // 페이지 내용 제거
-            window.location.href = "about:blank"; // 빈 페이지로 리다이렉트
-            return; // 페이지 로딩을 중단
+        
+            // 방문 데이터 업데이트
+            ipVisitData[clientIp] = visitData;
         }
 
         visitData.lastVisit = currentTime;
         ipVisitData[clientIp] = visitData;
         localStorage.setItem(ipVisitKey, JSON.stringify(ipVisitData));
-    }
 
-    resetData();
-    handleVisit();
-});
+        resetData();
+        handleVisit();
+    });
   </script>
 </head>
 <body>
@@ -259,7 +265,7 @@ window.addEventListener('load', function() {
         <button onclick="closeAd()" style="border:none; background:none; font-size:20px; cursor:pointer;">&times;</button>
     </div>
 </div>
-  
+
   <script>
   // _posts 폴더의 포스트 URL 목록을 Jekyll을 사용해 JavaScript 배열로 생성
   const postUrls = [
