--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -211,7 +211,7 @@ layout: default
   <div class="anchor-ad-top">
     <ins class="adsbygoogle"
          style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-"
+         data-ad-client="ca-pub-9374368296307755"
          data-ad-slot="3603389079"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -228,7 +228,7 @@ layout: default
   <div class="anchor-ad-bottom">
     <ins class="adsbygoogle"
     style="display:inline-block;width:728px;height:90px"
-    data-ad-client="ca-"
+    data-ad-client="ca-pub-9374368296307755"
     data-ad-slot="4202989029"></ins>
   <script>
    (adsbygoogle = window.adsbygoogle || []).push({});
