--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -39,6 +39,9 @@ layout: default
         </header>
       {% endunless %}
 
+      <!-- 애드센스 스크립트 추가 -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+
       <!-- 애드센스 광고 코드 추가 -->
       <div id="ads-container">
         <script>
