--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,9 @@
         </div>
       </footer>
     </div>
+    {% endif %}
 
+    {% if page.url != "/" %}
     <!-- 모바일 전용 광고 -->
     <div class="mobile-ad mobile-only">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
